@@ -3,8 +3,8 @@
 <links>
 <item name="Web Links &amp; Misc" url="links.htm"/>
 <item name="GtkRadiant Bugzilla - Report Bug" url="http://zerowing.idsoftware.com/bugzilla/index.cgi"/>
-<item name="MapCenter's GtkRadiant Forum" url="http://www.map-center.com/modules.php?name=Forums&amp;file=viewforum&amp;f=8"/>
 <item name="q3map2 handbook (web)" url="http://shaderlab.com/q3map2/manual/default.htm"/>
+<item name="ETB documentation (web)" url="http://www.map-craft.com/modules.php?name=ETB"/>
 <item name="ChangeLog" url="changelog.txt"/>
 <item name="Q3Map2 ChangeLog" url="changelog.q3map2.txt"/>
 <item name="Credits" url="credits.html"/>
